v0.4.0
1.登录 查询商店
2.每日商店推送


v.0.4.1
1.修复登录后若不主动查询商店,则开启定时任务后无法推送每日商店的问题.
2.修复在不设置地区的情况下,可开启定时任务的问题.
3.代码优化.
4.添加Valorant皮肤库数据刷新定时任务.
other:
1.现在当输入的不正确时,机器人会返回未知操作,而不是返回帮助列表.
todo:
1.定时任务手动触发
2.每日商店可自定推送背景图
3.每日商店推送任务可指定发送地点(私聊, 群聊)
4.执行逻辑时若等待时间超时(5分钟)自动取消,并发送回执给用户
5.增加权限管控(用于手动触发定时任务)


v0.5.0-pre
重要: 请使用过旧版本的用户,将/config/io.tiangou.valorant-bot-plugin文件夹下所有文件都删除, /data/io.tiangou.valorant-bot-plugin文件夹下除了user-cache.json文件以外的其他文件也请全部删除
本次更新对内部一些实现及API做了相当多相当大的调整,尤其是Sqlite数据库文件,对表结构进行了优化调整, 继续使用旧版的数据及配置文件可能会出现很大问题!!
1.增加插件内定时任务相关操作指令(Mirai Command指令)
2. 优化商店查询的逻辑,现在同一天内的多次查询会取缓存数据,而不是每次都重新生成图片
3. 增加了一个插件全局的配置文件(plugin-config.yml), 目前可以通过配置文件来自定义事件监听相关的处理逻辑
4. 增加了操作执行中等待输出超时后取消操作的逻辑
5. 增加了上次Valorant更新后,最新推出的**每周"配件商店"**查询功能
6. 增加了每日商店及配件商店生成背景图自定义的功能
7. 增加了一些定时任务,如缓存清空(后台任务),刷新账号安全认证等.
8. 数据库及持久化相关实现优化

v.0.5.0
相较于V0.5.0-pre没有功能性上的变化
优化了一些代码逻辑

v.0.5.1
修复了一个用户切换账号后可能会出现的缓存泄漏问题

v0.6.0
1.增加了插件监听群相关的配置,可以监听或者不监听指定的群/用户
2.现在已经将skiko的依赖项排除,若选用skiko进行绘图,才会下载相关依赖
3.增加了绘图API的配置,现在可以手动选用skiko或原生awt进行绘图
4.用户现在可以指定每日商店的推送地点,推送地点可以配置为多个
5.现在每日商店推送失败时,会将错误信息返回给用户
6.优化了一些代码逻辑
other:
本插件目前包含了几个自定义的Console指令
    -- /task 定时任务相关
    -- /visit 访问权限(插件黑白名单群/用户)管控相关
    若有使用需要 可到Console输入 /help 查看更多信息,在此不进行介绍
todo:
1.目前awt和skiko的切换仅仅是可用状态,关于更多内部细节的抽象和引用依赖并未很好的优化,后续应该会进行不小的改动

v0.6.1
1.修复了在某些情况下用户无法登录的问题

v0.6.2
1.修复了每日商店定时任务推送给用户私聊时无法发送的问题

v0.7.0
1.逻辑责任链代码优化
2.用户缓存中的每日商店推送地点的原数据结构已弃用
3.删除了指令等待时间超时自动退出的逻辑,有需要请手动退出
4.现在可以自定义绘图使用的字体文件
5.优化了AWT SKIKO绘图逻辑