@@ -6,22 +6,48 @@ import io.tiangou.other.http.client
 import io.tiangou.other.image.skiko.*
 import io.tiangou.repository.UserCache
 import io.tiangou.utils.*
-import org.jetbrains.skia.Canvas
 import org.jetbrains.skia.Image
 import org.jetbrains.skia.ImageInfo
 import org.jetbrains.skia.Surface
-import java.io.File
 
-object SkikoImageGenerator: ImageGenerator {
+object SkikoImageGenerator : ImageGenerator {
 
-    override suspend fun generateDailyStoreImage(userCache: UserCache): ByteArray =
-        storeImage(userCache.customBackgroundFile) {
-                val width = (it.width - it.width * 0.4f).toInt()
-                val height = width / 2
-                SkinsPanelLayout.convert(StoreApiHelper.queryStoreFront(userCache)).map { data ->
-                    singleDailySkinImage(width, height, data)
+    override suspend fun storeImage(userCache: UserCache, type: GenerateStoreImageType): ByteArray =
+        Surface.makeByImageAndProportion(
+            userCache.customBackgroundFile?.readBytes(),
+            ImageGenerator.wp,
+            ImageGenerator.hp
+        ).afterClose { surface ->
+            val storeFront = StoreApiHelper.queryStoreFront(userCache)
+            val width = (surface.width - surface.width * 0.4f).toInt()
+            val height = width / 2
+            val imageList = when (type) {
+                    GenerateStoreImageType.SKINS_PANEL_LAYOUT ->
+                        SkinsPanelLayout.convert(storeFront).map { data ->
+                            singleDailySkinImage(width, height, data)
+                        }
+
+                    GenerateStoreImageType.ACCESSORY_STORE ->
+                        AccessoryStore.convert(storeFront).map { data ->
+                            singleAccessoryItemImage(width, height, data)
+                        }
                 }
+            imageList.forEachIndexed { index, it ->
+                val lr = surface.width * 0.4f
+                val imageWidth = surface.width - lr
+                val imageHeight = it.height * (imageWidth / it.width)
+                val top =
+                    (surface.height - imageHeight * imageList.size - surface.height * 0.05f * (imageList.size - 1)) / 2
+                writeImageRect(
+                    it,
+                    imageWidth,
+                    imageHeight,
+                    (lr / 2f),
+                    (top + (imageHeight + surface.height * 0.05f) * index)
+                )
             }
+            surface.makeImageSnapshot().encodeToData()!!.bytes
+        }
 
     private suspend fun singleDailySkinImage(width: Int, height: Int, data: SkinImageData): Image =
         Surface.makeRaster(ImageInfo.makeN32Premul(width, height)).afterClose {
@@ -55,16 +81,6 @@ object SkikoImageGenerator: ImageGenerator {
             it.makeImageSnapshot()
         }
 
-    override suspend fun generateAccessoryStoreImage(userCache: UserCache): ByteArray =
-        storeImage(userCache.customBackgroundFile) {
-                val width = (it.width - it.width * 0.4f).toInt()
-                val height = width / 2
-                val storeFront = StoreApiHelper.queryStoreFront(userCache)
-                AccessoryStore.convert(storeFront).map { data ->
-                    singleAccessoryItemImage(width, height, data)
-                }
-            }
-
     private suspend fun singleAccessoryItemImage(width: Int, height: Int, data: AccessoryImageData): Image =
         Surface.makeRaster(ImageInfo.makeN32Premul(width, height)).afterClose {
             var heightY: Float = height / 2f
@@ -83,27 +99,5 @@ object SkikoImageGenerator: ImageGenerator {
             it.flush()
             it.makeImageSnapshot()
         }
-
-    private suspend fun storeImage(backgroundFile: File?, block: suspend Canvas.(Surface) -> List<Image>): ByteArray =
-        Surface.makeByImageAndProportion(backgroundFile?.readBytes(), ImageGenerator.wp, ImageGenerator.hp)
-            .afterClose { surface ->
-                val imageList = block(this, surface)
-                imageList.forEachIndexed { index, it ->
-                    val lr = surface.width * 0.4f
-                    val imageWidth = surface.width - lr
-                    val imageHeight = it.height * (imageWidth / it.width)
-                    val top =
-                        (surface.height - imageHeight * imageList.size - surface.height * 0.05f * (imageList.size - 1)) / 2
-                    writeImageRect(
-                        it,
-                        imageWidth,
-                        imageHeight,
-                        (lr / 2f),
-                        (top + (imageHeight + surface.height * 0.05f) * index)
-                    )
-
-                }
-                surface.makeImageSnapshot().encodeToData()!!.bytes
-            }
 
 }
